# rhic_beam_shape

./: .gitignore  CMakeLists.txt  README.md  run.py
include/: bunch.h  sim.h
ini/: sim.ini
python/: plot_utils.py  read_con.py
src/: bunch.cxx  sim.cxx
